--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "discord.js": "^13.8.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
