Changed gitignore again, more comments main.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# NEVER EVER CHANGE THIS LINE, CONTAINS MY DISCORD TOKEN BRAH :))
 src/token.json
+
 node_modules/
 src/commandHandler/commands/*.json
 commands_copy/
